RESOLVED FIXED251395
Running WebKitTestRunner with `--webkitlogging foo` doesn't turn on logging channels
https://bugs.webkit.org/show_bug.cgi?id=251395
Summary Running WebKitTestRunner with `--webkitlogging foo` doesn't turn on logging c...
Simon Fraser (smfr)
Reported 2023-01-30 14:35:49 PST
It sets the "WebKitLogging" default instead of the "WebKit2Logging" default.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-30 14:36:45 PST
Simon Fraser (smfr)
Comment 2 2023-01-30 14:38:50 PST
EWS
Comment 3 2023-01-30 23:28:32 PST
Committed 259607@main (7e5eb42fe1ad): <https://commits.webkit.org/259607@main> Reviewed commits have been landed. Closing PR #9347 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.