Running WebKitTestRunner with `--webkitlogging foo` doesn't turn on logging channels https://bugs.webkit.org/show_bug.cgi?id=251395 rdar://104837852

Reviewed by Tim Horton and Wenson Hsieh.

The NSUserDefault for WebKit logging channels still has the historical "WebKit2" in the name.

* Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::cocoaPlatformInitialize):

Canonical link: https://commits.webkit.org/259607@main